[package]
name = "rtp"
version = "0.1.0"
authors = ["Alexander Vtyurin <senior.joinu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wirehair-wrapper = "0.1.1"
uuid = "0.2"
hashbrown = "0.5"
pnet = "0.22.0"
md4 = "0.8.0"