[package]
name = "rtp"
version = "0.1.0"
authors = ["Alexander Vtyurin <senior.joinu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wirehair-wrapper = "0.1.1"
hashbrown = "0.5"
md4 = "0.8.0"
mio = "0.6.19"
atomic-counter = "1.0.1"